queue, title and subtitle are now correctly aligned

--- a/static/styles.css
+++ b/static/styles.css
@@ -20,14 +20,7 @@ body {
     max-width: 50%;
 }
 
-.flex-container2 {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-}
-
 .track-queue-container {
-    background-color: rgba(255, 0, 0, 0.1);
     text-align: left;
     max-width: 50%;
 }
@@ -38,7 +31,6 @@ body {
 
 /* Title and subtitle aligned to the right */
 .text-right {
-    background-color: rgba(0, 0, 255, 0.1);
     max-width: 50%;
     text-align: right;
 }
